latest/quality/clang_tidy/lola_get_new_samples_benchmarks.cpp.AspectRulesLintClangTidy.out
9214 warnings generated.
/home/runner/.bazel/sandbox/linux-sandbox/4255/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_get_new_samples_benchmarks.cpp:157:15: error: Value stored to '_' during its initialization is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
  157 |     for (auto _ : state)
      |               ^ ~
/home/runner/.bazel/sandbox/linux-sandbox/4255/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_get_new_samples_benchmarks.cpp:157:15: note: Value stored to '_' during its initialization is never read
  157 |     for (auto _ : state)
      |               ^ ~
Suppressed 9406 warnings (9203 in non-user code, 193 NOLINT, 10 with check filters).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
1 warning treated as error
